<resources>
    <string name="app_name">作業四之一 by林凭</string>

    <string name="sex">性別</string>
    <string name="sex_male">男生</string>
    <string name="sex_female">女生</string>

    <string name="age">年齡</string>
    <string-array name="male_age">
        <item>小於 30 歲</item>
        <item>30~40 歲</item>
        <item>大於 40 歲</item>
    </string-array>
    <string-array name="female_age">
        <item>小於 28 歲</item>
        <item>28~35歲</item>
        <item>大於 35 歲</item>
    </string-array>

    <string name="hobby">興趣</string>
    <string name="music">音樂</string>
    <string name="sing">唱歌</string>
    <string name="dance">跳舞</string>
    <string name="travel">旅行</string>
    <string name="reading">閱讀</string>
    <string name="writing">寫作</string>
    <string name="climbing">爬山</string>
    <string name="swim">游泳</string>
    <string name="eating">美食</string>
    <string name="drawing">繪畫</string>

    <string name="btnOK">確定</string>

    <string name="hobby_result">興趣：</string>

</resources>
